--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio | Arthur Fedorov - Technical Artist</title>
+    <title>Portfolio | Arthur Fiodarav - Technical Artist</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -268,7 +268,7 @@
                     <div>
                         <h1 class="text-5xl md:text-7xl font-extrabold text-white">
                             <span data-lang-ru>Фёдоров Артур</span>
-                            <span data-lang-en>Arthur Fedorov</span>
+                            <span data-lang-en>Arthur Fidarav</span>
                         </h1>
                         <h2 class="text-2xl md:text-3xl text-blue-400 font-medium mt-2">Technical Artist</h2>
                     </div>
@@ -1161,4 +1161,5 @@
         });
     </script>
 </body>
+
 </html>
