--- a/index.html
+++ b/index.html
@@ -262,8 +262,8 @@
                 </div>
                 <div class="flex justify-center items-center gap-8 flex-wrap">
                     <div class="w-32 h-32 md:w-40 md:h-40 rounded-full overflow-hidden border-4 border-gray-700" style="filter: grayscale(100%);">
-                        <img data-lang-ru src="https://sun9-33.userapi.com/s/v1/if1/JrKxVqi072KzVwZwzBGZn1MBg1NqHLJnVFSbdl7N39NcCjwijpn-wIxWgfQJrW2mTLvde_5R.jpg?quality=96&as=32x21,48x32,72x48,108x72,160x107,240x160,360x240,480x320,540x360,640x427,720x480,1080x721,1280x854&from=bu&cs=1280x0" alt="Фото Артура Фёдорова" class="w-full h-full object-cover">
-                        <img data-lang-en src="https://sun9-33.userapi.com/s/v1/if1/JrKxVqi072KzVwZwzBGZn1MBg1NqHLJnVFSbdl7N39NcCjwijpn-wIxWgfQJrW2mTLvde_5R.jpg?quality=96&as=32x21,48x32,72x48,108x72,160x107,240x160,360x240,480x320,540x360,640x427,720x480,1080x721,1280x854&from=bu&cs=1280x0" alt="Photo of Artur Fedorov" class="w-full h-full object-cover">
+                        <img data-lang-ru src="https://imgur.com/aed8709d-22c2-48d1-a1e9-80b1a4e916ac" alt="Фото Артура Фёдорова" class="w-full h-full object-cover">
+                        <img data-lang-en src="https://imgur.com/aed8709d-22c2-48d1-a1e9-80b1a4e916ac" alt="Photo of Artur Fiodarav" class="w-full h-full object-cover">
                     </div>
                     <div>
                         <h1 class="text-5xl md:text-7xl font-extrabold text-white">
@@ -1163,3 +1163,4 @@
 </body>
 
 </html>
+
