--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                     <div>
                         <h1 class="text-5xl md:text-7xl font-extrabold text-white">
                             <span data-lang-ru>Фёдоров Артур</span>
-                            <span data-lang-en>Arthur Fidarav</span>
+                            <span data-lang-en>Arthur Fiodarav</span>
                         </h1>
                         <h2 class="text-2xl md:text-3xl text-blue-400 font-medium mt-2">Technical Artist</h2>
                     </div>
@@ -1163,4 +1163,5 @@
 </body>
 
 </html>
+
 
