--- a/index.html
+++ b/index.html
@@ -262,8 +262,8 @@
                 </div>
                 <div class="flex justify-center items-center gap-8 flex-wrap">
                     <div class="w-32 h-32 md:w-40 md:h-40 rounded-full overflow-hidden border-4 border-gray-700" style="filter: grayscale(100%);">
-                        <img data-lang-ru src="https://imgur.com/aed8709d-22c2-48d1-a1e9-80b1a4e916ac" alt="Фото Артура Фёдорова" class="w-full h-full object-cover">
-                        <img data-lang-en src="https://imgur.com/aed8709d-22c2-48d1-a1e9-80b1a4e916ac" alt="Photo of Artur Fiodarav" class="w-full h-full object-cover">
+                        <img data-lang-ru src="https://imgur.com/JevBrNy.png" alt="Фото Артура Фёдорова" class="w-full h-full object-cover">
+                        <img data-lang-en src="https://imgur.com/JevBrNy.png" alt="Photo of Artur Fiodarav" class="w-full h-full object-cover">
                     </div>
                     <div>
                         <h1 class="text-5xl md:text-7xl font-extrabold text-white">
@@ -1163,5 +1163,6 @@
 </body>
 
 </html>
+
 
 
