--- a/index.html
+++ b/index.html
@@ -672,7 +672,14 @@
                 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
                     <!-- Item 1 -->
                     <div class="gallery-item">
-                        <div class="image-container"><img src="https://i.imgur.com/3JetMnF.png" alt="Описание рендера 1"></div>
+                        <div class="image-container"><img src="https://i.imgur.com/iRaB4NE.png" alt="Описание рендера 1"></div>
+                        <div class="texture-maps-container">
+                            <div class="texture-map" data-src="https://i.imgur.com/35qlvjZ.jpeg"><img src="https://i.imgur.com/35qlvjZ.jpeg" alt="Normal Map"></div>
+                            <div class="texture-map" data-src="https://i.imgur.com/EQWThkq.jpeg"><img src="https://i.imgur.com/EQWThkq.jpeg" alt="AO Map"></div>
+                            <div class="texture-map" data-src="https://i.imgur.com/mCGHaem.png"><img src="https://i.imgur.com/mCGHaem.png" alt="Roughness Map"></div>
+                            <div class="texture-map" data-src="https://i.imgur.com/f56TgxX.jpeg"><img src="https://i.imgur.com/f56TgxX.jpeg" alt="Color Map"></div>
+                            <div class="texture-map" data-src="https://i.imgur.com/u2mUqdy.jpeg"><img src="https://i.imgur.com/u2mUqdy.jpeg" alt="Height Map"></div>
+                        </div>
                     </div>
                     <!-- Item 2 with Texture Maps -->
                     <div class="gallery-item">
@@ -1163,6 +1170,7 @@
 </body>
 
 </html>
+
 
 
 
