--- a/index.html
+++ b/index.html
@@ -672,7 +672,7 @@
                 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
                     <!-- Item 1 -->
                     <div class="gallery-item">
-                        <div class="image-container"><img src="https://i.imgur.com/ukyZOYT.jpeg" alt="Описание рендера 1"></div>
+                        <div class="image-container"><img src="https://i.imgur.com/6rBvWMZ.jpeg" alt="Описание рендера 1"></div>
                         <div class="texture-maps-container">
                             <div class="texture-map" data-src="https://i.imgur.com/35qlvjZ.jpeg"><img src="https://i.imgur.com/35qlvjZ.jpeg" alt="Normal Map"></div>
                             <div class="texture-map" data-src="https://i.imgur.com/EQWThkq.jpeg"><img src="https://i.imgur.com/EQWThkq.jpeg" alt="AO Map"></div>
@@ -1170,6 +1170,7 @@
 </body>
 
 </html>
+
 
 
 
