--- a/index.html
+++ b/index.html
@@ -809,7 +809,7 @@
                     </div>
                     <!-- VFX Graph Explosion -->
                     <div class="cv-card">
-                        <div class="video-container mb-4 video-placeholder" data-video-ids="c_3WGAYfRww,ECA9xlg1N1o">
+                        <div class="video-container mb-4 video-placeholder" data-video-ids="snpor-cynDA,ECA9xlg1N1o">
                            <img src="https://img.youtube.com/vi/c_3WGAYfRww/hqdefault.jpg" alt="VFX Graph Explosion Preview" class="video-thumbnail">
                            <div class="play-button"></div>
                         </div>
@@ -1170,6 +1170,7 @@
 </body>
 
 </html>
+
 
 
 
