--- a/index.html
+++ b/index.html
@@ -274,8 +274,8 @@
                  <div class="flex justify-center items-center gap-8 flex-wrap">
                      <div class="w-32 h-32 md:w-40 md:h-40 rounded-full overflow-hidden border-4 border-gray-700" style="filter: grayscale(100%);">
                          <!-- Profile picture loads immediately, not lazy -->
-                         <img data-lang-ru src="https://i.imgur.com/ITDQEcO.png" alt="Фото Артура Фёдорова" class="w-full h-full object-cover">
-                         <img data-lang-en src="https://i.imgur.com/ITDQEcO.png" alt="Photo of Artur Fiodarav" class="w-full h-full object-cover">
+                         <img data-lang-ru src="img/main_photo.png" alt="Фото Артура Фёдорова" class="w-full h-full object-cover">
+                         <img data-lang-en src="img/main_photo.png" alt="Photo of Artur Fiodarav" class="w-full h-full object-cover">
                      </div>
                      <div>
                          <h1 class="text-5xl md:text-7xl font-extrabold text-white">
@@ -348,8 +348,8 @@
                          </p>
                          <div>
                              <!-- GIFs are now properly lazy-loaded -->
-                             <img data-lang-ru src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="https://i.imgur.com/UuxFb56.gif" class="lazy-image w-full rounded-lg" alt="I like nodes gif">
-                             <img data-lang-en src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="https://i.imgur.com/OKZw81L.gif" class="lazy-image w-full rounded-lg" alt="I like nodes gif">
+                             <img data-lang-ru src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="img/NodesRu.gif" class="lazy-image w-full rounded-lg" alt="I like nodes gif">
+                             <img data-lang-en src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="img/Nodes.gif" class="lazy-image w-full rounded-lg" alt="I like nodes gif">
                          </div>
                      </div>
                  </div>
@@ -555,7 +555,7 @@
                            <div class="play-button"></div>
                         </div>
                         <div class="gallery-item">
-                            <div class="image-container" style="padding-top: 56.25%;"><img class="lazy-image" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="https://i.imgur.com/lVdIWfR.png" alt="Изображение проекта Valhalla 1"></div>
+                            <div class="image-container" style="padding-top: 56.25%;"><img class="lazy-image" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="img/SH1_Energy.png" alt="Изображение проекта Valhalla 1"></div>
                         </div>
                     </div>
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
@@ -564,7 +564,7 @@
                            <div class="play-button"></div>
                         </div>
                         <div class="gallery-item">
-                            <div class="image-container" style="padding-top: 56.25%;"><img class="lazy-image" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="https://i.imgur.com/UXicjrs.png" alt="Изображение проекта Valhalla 2"></div>
+                            <div class="image-container" style="padding-top: 56.25%;"><img class="lazy-image" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="img/SH2_Water.png" alt="Изображение проекта Valhalla 2"></div>
                         </div>
                     </div>
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
@@ -573,7 +573,7 @@
                            <div class="play-button"></div>
                         </div>
                         <div class="gallery-item">
-                            <div class="image-container" style="padding-top: 56.25%;"><img class="lazy-image" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="https://i.imgur.com/f0Ucdbl.png" alt="Изображение проекта Valhalla 2"></div>
+                            <div class="image-container" style="padding-top: 56.25%;"><img class="lazy-image" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="img/SH3_Vignette.png" alt="Изображение проекта Valhalla 2"></div>
                         </div>
                     </div>                      
                 </div>
@@ -666,7 +666,7 @@
                     </h4>
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                         <div class="gallery-item">
-                            <div class="image-container" style="padding-top: 56.25%;"><img class="lazy-image" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="https://i.imgur.com/dtACOWr.png" alt="Изображение проекта Holodog"></div>
+                            <div class="image-container" style="padding-top: 56.25%;"><img class="lazy-image" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="img/SH4_Shield.png" alt="Изображение проекта Holodog"></div>
                         </div>
                         <div class="video-container video-placeholder" data-video-ids="iMwMMa9qOFY">
                            <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="https://img.youtube.com/vi/iMwMMa9qOFY/hqdefault.jpg" alt="Holodog Shader Preview" class="lazy-image video-thumbnail">
@@ -687,68 +687,68 @@
                 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
                     <!-- Item 1 -->
                     <div class="gallery-item">
-                        <div class="image-container"><img class="lazy-image" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="https://i.imgur.com/6rBvWMZ.jpeg" alt="Описание рендера 1"></div>
+                        <div class="image-container"><img class="lazy-image" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="img/Bark.jpg" alt="Bark Material Render"></div>
                         <div class="texture-maps-container">
-                            <div class="texture-map" data-src="https://i.imgur.com/35qlvjZ.jpeg"><img src="https://i.imgur.com/35qlvjZ.jpeg" alt="Normal Map"></div>
-                            <div class="texture-map" data-src="https://i.imgur.com/EQWThkq.jpeg"><img src="https://i.imgur.com/EQWThkq.jpeg" alt="AO Map"></div>
-                            <div class="texture-map" data-src="https://i.imgur.com/mCGHaem.png"><img src="https://i.imgur.com/mCGHaem.png" alt="Roughness Map"></div>
-                            <div class="texture-map" data-src="https://i.imgur.com/f56TgxX.jpeg"><img src="https://i.imgur.com/f56TgxX.jpeg" alt="Color Map"></div>
-                            <div class="texture-map" data-src="https://i.imgur.com/u2mUqdy.jpeg"><img src="https://i.imgur.com/u2mUqdy.jpeg" alt="Height Map"></div>
+                            <div class="texture-map" data-src="img/Bark_normal.jpg"><img src="img/Bark_normal.jpg" alt="Normal Map"></div>
+                            <div class="texture-map" data-src="img/Bark_ao.jpg"><img src="img/Bark_ao.jpg" alt="AO Map"></div>
+                            <div class="texture-map" data-src="img/Bark_roughness.jpg"><img src="img/Bark_roughness.jpg" alt="Roughness Map"></div>
+                            <div class="texture-map" data-src="img/Bark_basecolor.jpg"><img src="img/Bark_basecolor.jpg" alt="Color Map"></div>
+                            <div class="texture-map" data-src="img/Bark_height.jpg"><img src="img/Bark_height.jpg" alt="Height Map"></div>
                         </div>
                     </div>
                     <!-- Item 2 with Texture Maps -->
                     <div class="gallery-item">
-                        <div class="image-container"><img class="lazy-image" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="https://i.imgur.com/GUQXp76.jpeg" alt="Описание скриншота 1"></div>
+                        <div class="image-container"><img class="lazy-image" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="img/Brick_1.jpg" alt="Brick Material Render"></div>
                         <div class="texture-maps-container">
-                            <div class="texture-map" data-src="https://i.imgur.com/rZLBXq9.jpeg"><img src="https://i.imgur.com/rZLBXq9.jpeg" alt="Normal Map"></div>
-                            <div class="texture-map" data-src="https://i.imgur.com/CNYGFAB.jpeg"><img src="https://i.imgur.com/CNYGFAB.jpeg" alt="AO Map"></div>
-                            <div class="texture-map" data-src="https://i.imgur.com/Z8RV9dT.jpeg"><img src="https://i.imgur.com/Z8RV9dT.jpeg" alt="Roughness Map"></div>
-                            <div class="texture-map" data-src="https://i.imgur.com/elZHIuC.jpeg"><img src="https://i.imgur.com/elZHIuC.jpeg" alt="Color Map"></div>
-                            <div class="texture-map" data-src="https://i.imgur.com/H5fg5U9.png"><img src="https://i.imgur.com/H5fg5U9.png" alt="Height Map"></div>
-                            <div class="texture-map" data-src="https://i.imgur.com/rIRi28b.png"><img src="https://i.imgur.com/rIRi28b.png" alt="Height Map"></div>
-                            <div class="texture-map" data-src="https://i.imgur.com/zjo8ADx.png"><img src="https://i.imgur.com/zjo8ADx.png" alt="Height Map"></div>
+                            <div class="texture-map" data-src="img/Brick_1_normal.jpg"><img src="img/Brick_1_normal.jpg" alt="Normal Map"></div>
+                            <div class="texture-map" data-src="img/Brick_1_ambientocclusion.jpg"><img src="img/Brick_1_ambientocclusion.jpg" alt="AO Map"></div>
+                            <div class="texture-map" data-src="img/Brick_1_roughness.jpg"><img src="img/Brick_1_roughness.jpg" alt="Roughness Map"></div>
+                            <div class="texture-map" data-src="img/Brick_1_basecolor.jpg"><img src="img/Brick_1_basecolor.jpg" alt="Color Map"></div>
+                            <div class="texture-map" data-src="img/Brick_1_height.jpg"><img src="img/Brick_1_height.jpg" alt="Height Map"></div>
                         </div>
                     </div>
                     <!-- Item 3 with Texture Maps -->
                     <div class="gallery-item">
-                        <div class="image-container"><img class="lazy-image" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="https://i.imgur.com/EJPhxOK.jpeg" alt="Описание материала 1"></div>
+                        <div class="image-container"><img class="lazy-image" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="img/OrnateFabric.jpg" alt="Ornate Fabric Material Render"></div>
                         <div class="texture-maps-container">
-                            <div class="texture-map" data-src="https://i.imgur.com/IkjccBa.jpeg"><img src="https://i.imgur.com/IkjccBa.jpeg" alt="Normal Map"></div>
-                            <div class="texture-map" data-src="https://i.imgur.com/Vds94Eg.jpeg"><img src="https://i.imgur.com/Vds94Eg.jpeg" alt="AO Map"></div>
-                            <div class="texture-map" data-src="https://i.imgur.com/kXZWb0V.png"><img src="https://i.imgur.com/kXZWb0V.png" alt="Roughness Map"></div>
-                            <div class="texture-map" data-src="https://i.imgur.com/WTk1MAS.jpeg"><img src="https://i.imgur.com/WTk1MAS.jpeg" alt="Color Map"></div>
-                            <div class="texture-map" data-src="https://i.imgur.com/EbOvMzu.jpeg"><img src="https://i.imgur.com/EbOvMzu.jpeg" alt="Height Map"></div>
+                            <div class="texture-map" data-src="img/OrnateFabric_normal.jpg"><img src="img/OrnateFabric_normal.jpg" alt="Normal Map"></div>
+                            <div class="texture-map" data-src="img/OrnateFabric_ambientocclusion.jpg"><img src="img/OrnateFabric_ambientocclusion.jpg" alt="AO Map"></div>
+                            <div class="texture-map" data-src="img/OrnateFabric_roughness.jpg"><img src="img/OrnateFabric_roughness.jpg" alt="Roughness Map"></div>
+                            <div class="texture-map" data-src="img/OrnateFabric_basecolor.jpg"><img src="img/OrnateFabric_basecolor.jpg" alt="Color Map"></div>
+                            <div class="texture-map" data-src="img/OrnateFabric_height.jpg"><img src="img/OrnateFabric_height.jpg" alt="Height Map"></div>
+                            <div class="texture-map" data-src="img/OrnateFabric_metallic.jpg"><img src="img/OrnateFabric_metallic.jpg" alt="Metallic Map"></div>
+                            <div class="texture-map" data-src="img/OrnateFabric_translucensy.jpg"><img src="img/OrnateFabric_translucensy.jpg" alt="Translucensy Map"></div>
                         </div>
                     </div>
                     <!-- Item 4 with Texture Maps -->
                     <div class="gallery-item">
-                        <div class="image-container"><img class="lazy-image" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="https://i.imgur.com/I2IQa0W.jpeg" alt="Описание нодов VFX"></div>
+                        <div class="image-container"><img class="lazy-image" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="img/Broken_Tiles_main.jpg" alt="Broken Tiles Material Render"></div>
                         <div class="texture-maps-container">
-                            <div class="texture-map" data-src="https://i.imgur.com/8OZaL3m.jpeg"><img src="https://i.imgur.com/8OZaL3m.jpeg" alt="Normal Map"></div>
-                            <div class="texture-map" data-src="https://i.imgur.com/6hajogn.jpeg"><img src="https://i.imgur.com/6hajogn.jpeg" alt="AO Map"></div>
-                            <div class="texture-map" data-src="https://i.imgur.com/2jWIfEW.jpeg"><img src="https://i.imgur.com/2jWIfEW.jpeg" alt="Roughness Map"></div>
-                            <div class="texture-map" data-src="https://i.imgur.com/k8OVeGR.jpeg"><img src="https://i.imgur.com/k8OVeGR.jpeg" alt="Color Map"></div>
-                            <div class="texture-map" data-src="https://i.imgur.com/iWjOcQf.jpeg"><img src="https://i.imgur.com/iWjOcQf.jpeg" alt="Height Map"></div>
+                            <div class="texture-map" data-src="img/Broken_Tiles_normal.jpg"><img src="img/Broken_Tiles_normal.jpg" alt="Normal Map"></div>
+                            <div class="texture-map" data-src="img/Broken_Tiles_ambientocclusion.jpg"><img src="img/Broken_Tiles_ambientocclusion.jpg" alt="AO Map"></div>
+                            <div class="texture-map" data-src="img/Broken_Tiles_roughness.jpg"><img src="img/Broken_Tiles_roughness.jpg" alt="Roughness Map"></div>
+                            <div class="texture-map" data-src="img/Broken_Tiles_basecolor.jpg"><img src="img/Broken_Tiles_basecolor.jpg" alt="Color Map"></div>
+                            <div class="texture-map" data-src="img/Broken_Tiles_height.jpg"><img src="img/Broken_Tiles_height.jpg" alt="Height Map"></div>
                         </div>
                     </div>
                     <!-- Item 5 -->
                     <div class="gallery-item">
-                        <div class="image-container"><img class="lazy-image" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="https://i.imgur.com/R6cQpXx.png" alt="Описание рендера 2"></div>
+                        <div class="image-container"><img class="lazy-image" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="img/Render_1.png" alt="Описание рендера 2"></div>
                     </div>
                     <!-- Item 6 -->
                     <div class="gallery-item">
-                        <div class="image-container"><img class="lazy-image" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="https://i.imgur.com/vBkQVP2.png" alt="Описание графа шейдера"></div>
+                        <div class="image-container"><img class="lazy-image" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="img/Render_2.png" alt="Описание графа шейдера"></div>
                     </div>
                 </div>
                 <div class="grid grid-cols-1 sm:grid-cols-2 gap-6 mt-6">
                     <div class="gallery-item">
                         <div class="image-container" style="padding-top: 56.25%;">
-                            <img class="lazy-image" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="https://i.imgur.com/ZpB6oAo.png" alt="Дополнительное изображение 1">
+                            <img class="lazy-image" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="img/Pixel_1.png" alt="Дополнительное изображение 1">
                         </div>
                     </div>
                     <div class="gallery-item">
                         <div class="image-container" style="padding-top: 56.25%;">
-                            <img class="lazy-image" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="https://i.imgur.com/LBZ8Rwi.png" alt="Дополнительное изображение 2">
+                            <img class="lazy-image" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="img/Pixel_2.png" alt="Дополнительное изображение 2">
                         </div>
                     </div>
                 </div>
