--- a/index.html
+++ b/index.html
@@ -273,9 +273,8 @@
                  </div>
                  <div class="flex justify-center items-center gap-8 flex-wrap">
                      <div class="w-32 h-32 md:w-40 md:h-40 rounded-full overflow-hidden border-4 border-gray-700" style="filter: grayscale(100%);">
-                         <!-- Profile picture loads immediately, not lazy -->
-                         <img data-lang-ru src="img/main_photo.png" alt="Фото Артура Фёдорова" class="w-full h-full object-cover">
-                         <img data-lang-en src="img/main_photo.png" alt="Photo of Artur Fiodarav" class="w-full h-full object-cover">
+                         <img data-lang-ru src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="img/main_photo.png" alt="Фото Артура Фёдорова" class="lazy-image w-full h-full object-cover">
+                         <img data-lang-en src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="img/main_photo.png" alt="Photo of Artur Fiodarav" class="lazy-image w-full h-full object-cover">
                      </div>
                      <div>
                          <h1 class="text-5xl md:text-7xl font-extrabold text-white">
@@ -1229,3 +1228,4 @@
 </body>
 
 </html>
+
