--- a/index.html
+++ b/index.html
@@ -708,7 +708,7 @@
                     </div>
                     <!-- Item 3 with Texture Maps -->
                     <div class="gallery-item">
-                        <div class="image-container"><img class="lazy-image" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="img/OrnateFabric.jpg" alt="Ornate Fabric Material Render"></div>
+                        <div class="image-container"><img class="lazy-image" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="img/OrnateFabric.jpeg" alt="Ornate Fabric Material Render"></div>
                         <div class="texture-maps-container">
                             <div class="texture-map" data-src="img/OrnateFabric_normal.jpg"><img src="img/OrnateFabric_normal.jpg" alt="Normal Map"></div>
                             <div class="texture-map" data-src="img/OrnateFabric_ambientocclusion.jpg"><img src="img/OrnateFabric_ambientocclusion.jpg" alt="AO Map"></div>
@@ -721,7 +721,7 @@
                     </div>
                     <!-- Item 4 with Texture Maps -->
                     <div class="gallery-item">
-                        <div class="image-container"><img class="lazy-image" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="img/Broken_Tiles_main.jpg" alt="Broken Tiles Material Render"></div>
+                        <div class="image-container"><img class="lazy-image" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="img/BrokenTiles.jpg" alt="Broken Tiles Material Render"></div>
                         <div class="texture-maps-container">
                             <div class="texture-map" data-src="img/Broken_Tiles_normal.jpg"><img src="img/Broken_Tiles_normal.jpg" alt="Normal Map"></div>
                             <div class="texture-map" data-src="img/Broken_Tiles_ambientocclusion.jpg"><img src="img/Broken_Tiles_ambientocclusion.jpg" alt="AO Map"></div>
@@ -1228,4 +1228,5 @@
 </body>
 
 </html>
+
 
