--- a/index.html
+++ b/index.html
@@ -751,6 +751,13 @@
                         </div>
                     </div>
                 </div>
+                <div class="grid grid-cols-1 sm:grid-cols-1 gap-6 mt-6">
+                    <div class="gallery-item">
+                        <div class="image-container" style="padding-top: 56.25%;">
+                            <img class="lazy-image" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="img/Mecha_Sewers_Biome.png" alt="Дополнительное изображение 1">
+                        </div>
+                    </div>
+                </div>
             </section>
 
             <hr class="divider">
@@ -1228,5 +1235,6 @@
 </body>
 
 </html>
+
 
 
