--- a/index.html
+++ b/index.html
@@ -721,7 +721,7 @@
                         <span data-lang-en>To create an audio-centric architecture where the FMOD music track acts as a "conductor," controlling gameplay, level generation, shaders, and UI.</span>
                     </p>
                 </div>
-                <div class="video-container mb-8 video-placeholder" data-video-ids="94KlTkUudzQ">
+                <div class="video-container mb-8 video-placeholder" data-video-ids="8YSl1aLZw2I">
                     <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="https://img.youtube.com/vi/94KlTkUudzQ/hqdefault.jpg" alt="Too Late for Valhalla Preview" class="lazy-image video-thumbnail">
                     <div class="play-button"></div>
                 </div>
@@ -1655,5 +1655,6 @@
     </script>
 </body>
 </html>
+
 
 
