--- a/index.html
+++ b/index.html
@@ -1102,7 +1102,7 @@
                              <div class="play-button"></div>
                         </div>
                         <h4 class="text-lg font-bold text-white"><span data-lang-ru>Эффекты для мобильной игры</span><span data-lang-en>Effects for a Mobile Game</span></h4>
-                        <p class="text-gray-400 text-sm"><span data-lang-ru>Разработал серию эффектов частиц, оптимизированных для работы без VFX Graph. Управление параметрами Shuriken реализовано через передачу данных в кастомных UV-каналах для высокой производительности.</span><span data-lang-en>Developed a series of particle effects optimized to run without VFX Graph. Instead, Shuriken parameters are controlled by passing data through custom UV channels, ensuring high performance.</span></p>
+                        <p class="text-gray-400 text-sm"><span data-lang-ru>Разработал серию эффектов частиц, оптимизированных для работы с более старыми телефонами (без VFX Graph/Vulkan). Управление параметрами Shuriken реализовано через передачу данных в кастомных UV-каналах.</span><span data-lang-en>Developed a series of particle effects optimized to run on older phones (without VFX Graph/Vulkan). Instead, Shuriken parameters are controlled by passing data through custom UV channels.</span></p>
                     </div>
                     <!-- VR Features -->
                     <div class="cv-card">
@@ -1655,6 +1655,7 @@
     </script>
 </body>
 </html>
+
 
 
 
