--- a/index.html
+++ b/index.html
@@ -557,8 +557,8 @@
                                 <span data-lang-en>Freelance 3D/2D Generalist & Tech Artist</span>
                             </h4>
                             <p class="text-base font-normal text-gray-400">
-                                <span data-lang-ru>VFX, шейдеры, материалы, SFX, подготовка к релизам на Steam/PS Store, организация тестирований.</span>
-                                <span data-lang-en>VFX, shaders, materials, SFX, preparing for Steam/PS Store releases, organizing testing sessions.</span>
+                                <span data-lang-ru>VFX, шейдеры, PBR материалы, SFX/OST, организация тестирований.</span>
+                                <span data-lang-en>VFX, shaders, PBR materials, SFX/OST, organizing testing sessions.</span>
                             </p>
                         </li>
                         <li class="mb-10 ml-4">
@@ -1655,6 +1655,7 @@
     </script>
 </body>
 </html>
+
 
 
 
