--- a/index.html
+++ b/index.html
@@ -721,8 +721,8 @@
                         <span data-lang-en>To create an audio-centric architecture where the FMOD music track acts as a "conductor," controlling gameplay, level generation, shaders, and UI.</span>
                     </p>
                 </div>
-                <div class="video-container mb-8 video-placeholder" data-video-ids="8YSl1aLZw2I">
-                    <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="https://img.youtube.com/vi/94KlTkUudzQ/hqdefault.jpg" alt="Too Late for Valhalla Preview" class="lazy-image video-thumbnail">
+                <div class="video-container mb-8 video-placeholder" data-video-ids="DCNhyywDDTs">
+                    <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="https://img.youtube.com/vi/DCNhyywDDTs/hqdefault.jpg" alt="Too Late for Valhalla Preview" class="lazy-image video-thumbnail">
                     <div class="play-button"></div>
                 </div>
                 <!-- Feature Cards Grid -->
@@ -1655,6 +1655,7 @@
     </script>
 </body>
 </html>
+
 
 
 
