--- a/index.html
+++ b/index.html
@@ -692,8 +692,6 @@
              <div class="mt-8 flex justify-center gap-x-6 gap-y-3 flex-wrap text-lg">
                  <a href="mailto:okamisen@yandex.ru" class="text-white hover:text-blue-400">okamisen@yandex.ru</a>
                  <span class="text-gray-500">|</span>
-                 <a href="https://www.linkedin.com/in/v-v-15362034a/" target="_blank" class="text-white hover:text-blue-400">LinkedIn</a>
-                  <span class="text-gray-500">|</span>
                   <a href="https://t.me/Okamisen" target="_blank" class="text-white hover:text-blue-400">Telegram</a>
                   <span class="text-gray-500">|</span>
                  <span class="text-white">
@@ -721,8 +719,8 @@
                         <span data-lang-en>To create an audio-centric architecture where the FMOD music track acts as a "conductor," controlling gameplay, level generation, shaders, and UI.</span>
                     </p>
                 </div>
-                <div class="video-container mb-8 video-placeholder" data-video-ids="DCNhyywDDTs">
-                    <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="https://img.youtube.com/vi/DCNhyywDDTs/hqdefault.jpg" alt="Too Late for Valhalla Preview" class="lazy-image video-thumbnail">
+                <div class="video-container mb-8 video-placeholder" data-video-ids="s45kJD9Bwhg">
+                    <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="https://img.youtube.com/vi/DCNhyywDDTs/s45kJD9Bwhg.jpg" alt="Too Late for Valhalla Preview" class="lazy-image video-thumbnail">
                     <div class="play-button"></div>
                 </div>
                 <!-- Feature Cards Grid -->
@@ -1655,6 +1653,7 @@
     </script>
 </body>
 </html>
+
 
 
 
