--- a/index.html
+++ b/index.html
@@ -719,8 +719,8 @@
                         <span data-lang-en>To create an audio-centric architecture where the FMOD music track acts as a "conductor," controlling gameplay, level generation, shaders, and UI.</span>
                     </p>
                 </div>
-                <div class="video-container mb-8 video-placeholder" data-video-ids="s45kJD9Bwhg">
-                    <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="https://img.youtube.com/vi/DCNhyywDDTs/s45kJD9Bwhg.jpg" alt="Too Late for Valhalla Preview" class="lazy-image video-thumbnail">
+                <div class="video-container mb-8 video-placeholder" data-video-ids="6mRBOMvQ7N4">
+                    <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="https://img.youtube.com/vi/DCNhyywDDTs/6mRBOMvQ7N4.jpg" alt="Too Late for Valhalla Preview" class="lazy-image video-thumbnail">
                     <div class="play-button"></div>
                 </div>
                 <!-- Feature Cards Grid -->
@@ -1653,6 +1653,7 @@
     </script>
 </body>
 </html>
+
 
 
 
